# calculate-tax

./: .gitignore
include/: taxcalculate.h
src/: taxcalculate.cpp
test/: CMakeLists.txt  TestTaxCalculator.cpp
